# prumo-dev

./: .gitignore  AGENTS.md  ANTIGRAVITY-ADAPTER-PLAYBOOK.md  CHANGELOG.md  CLAUDE-CODE-ADAPTER-PLAYBOOK.md  CLAUDE.md  CODEX-ADAPTER-PLAYBOOK.md  COWORK-ADAPTER-PLAYBOOK.md  COWORK-MARKETPLACE-PLAYBOOK.md  DECISIONS.md  EXECUTION-NOTES.md  EXTERNAL-REVIEW-BRIEF.md  EXTERNAL-REVIEW-PROMPTS.md  GEMINI-CLI-ADAPTER-PLAYBOOK.md  GITHUB-ISSUE-BACKLOG-CAPABILITY-BACKEND.md  HOST-ADAPTER-IMPLEMENTATION-PLAN.md  HOST-CONSUMPTION-VALIDATION.md  INVOCATION-UX-CONTRACT.md  ISSUE-DEFINITION-OF-DONE.md  LICENSE  LOCAL-RUNTIME-PHASE1-PLAN.md  LOCAL-RUNTIME-TRANSITION-PLAN.md  PLUGIN-MIGRATION-PHASES.md  PRUMO-CAPABILITY-BACKEND-ARCHITECTURE.md  PRUMO-PLUGIN-VS-RUNTIME-COMPARISON.md  README.md  REPO-WORKSPACE-JURISDICTION.md  WORKSPACE-LAYOUT-AND-ADOPTION-PLAN.md  gotchas.md  marketplace.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  mirror-to-prumo.yml  needs-review-detector.yml  zombie-issue-detector.yml
bridges/google-apps-script/: README.md
canon/: README.md
canon/adapters/: host-boundaries.md
canon/contracts/: capability-granularity.md  error-fallback.md  interaction-format.md  invocation.md  persona-portability.md
canon/governance/: file-governance.md  load-policy.md  memory-hygiene.md
canon/orchestration/: kickoff.md  shared-contract.md
commands/: briefing.md  handover.md  higiene.md  prumo.md  sanitize.md  setup.md  start.md
cowork-plugin/scripts/: prumo_briefing_state.py  prumo_claude_hygiene.py  safe_core_update.sh
cowork-plugin/scripts/tests/: briefing_smoke.sh  claude_hygiene_smoke.sh  cowork_runtime_bridge_smoke.sh  interaction_contract_smoke.sh  local_runtime_google_calendar_smoke.sh  local_runtime_migrate_smoke.sh  local_runtime_phase1_smoke.sh
cowork-plugin/skills/briefing/: SKILL.md
cowork-plugin/skills/doctor/: SKILL.md
cowork-plugin/skills/handover/: SKILL.md
cowork-plugin/skills/higiene/: SKILL.md
cowork-plugin/skills/prumo/: SKILL.md
cowork-plugin/skills/prumo/references/: agents-md-template.md  apps-script-setup.md  claude-md-template.md  email-snapshot-personal-template.gs  email-snapshot-work-template.gs  file-protection-rules.md  prumo-core.md
cowork-plugin/skills/sanitize/: SKILL.md
cowork-plugin/skills/start/: SKILL.md
runtime/prumo_runtime/: __init__.py  __main__.py  acervo.py  acervo_apply.py  apple_reminders.py  capabilities.py  cli.py  constants.py  daily_operator.py  fim.py  generate_inbox_preview.py  google_api.py  google_integration.py  host_adapters.py  identity.py  inbox_preview.py  menu.py  pauta_parsing.py  templates.py  version_check.py  workspace.py  workspace_paths.py
runtime/prumo_runtime/commands/: __init__.py  acervo.py  auth_apple_reminders.py  briefing.py  context_dump.py  fim.py  inbox_preview.py  menu.py  migrate.py  migrate_skills.py  repair.py  setup.py  start.py  update.py
runtime/prumo_runtime/helpers/: apple_reminders.applescript  apple_reminders.swift
runtime/tests/: test_acervo_apply.py  test_acervo_enumerator.py  test_acervo_skill.py  test_announced_commands.py  test_apple_reminders.py  test_briefing.py  test_cli.py  test_daily_operator.py  test_decidir_skill.py  test_due_date_filter.py  test_fim.py  test_fim_skill.py  test_google_api.py  test_google_integration.py  test_host_adapters.py  test_identity_inference.py  test_inbox_preview.py  test_index_retirement.py  test_last_briefing.py  test_menu.py  test_menu_skill.py  test_migrate.py  test_migrate_skills.py  test_mirror_dist_consistency.py  test_picker_visibility.py  test_repair.py  test_setup.py  test_skills_dispatch.py  test_start.py  test_templates.py  test_update.py  test_version_check.py  test_version_sync.py  test_version_warn_manual.py  test_workspace.py
scripts/: baseline.json  prumo_antigravity_install.sh  prumo_cowork_bridge.py  prumo_plugin_install.sh  prumo_runtime_install.ps1  prumo_runtime_install.sh  prumo_runtime_update.ps1  prumo_runtime_update.sh  quality_gate.py  version_bump_guard.py
skills/abrir/: SKILL.md
skills/acervo/: SKILL.md
skills/acervo/assets/: template.html
skills/acervo/references/: acoes-acervo.md
skills/briefing/: SKILL.md
skills/decidir/: SKILL.md
skills/decidir/assets/: template.html
skills/decidir/references/: acoes-allowlist.md  exemplos-de-cards.md
skills/doctor/: SKILL.md
skills/faxina/: SKILL.md
skills/fim/: SKILL.md
skills/higiene/: SKILL.md
skills/menu/: SKILL.md
skills/prumo/: SKILL.md
skills/prumo/references/: agent-md-template.md  agents-md-template.md  changelog-setup.md  claude-md-template.md  file-protection-rules.md  file-templates.md  perfil-template.md  prumo-core.md
skills/prumo/references/modules/: briefing-procedure.md  claude-hygiene.md  cowork-runtime-bridge.md  dispatch.md  escrita-calendario.md  inbox-processing.md  interaction-format.md  (+7 more)
skills/sanitize/: SKILL.md
skills/sanitize/references/: sanitization.md
skills/start/: SKILL.md
(+13 files in other folders)
