[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prumo-runtime"
version = "5.2.0"
description = "Runtime local do Prumo"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Prumo Maintainers" }
]
dependencies = [
  # zoneinfo da stdlib em Windows nao tem dados de timezone embutidos;
  # macOS/Linux leem do sistema. Pin condicional pra evitar ZoneInfoNotFoundError.
  'tzdata; sys_platform == "win32"',
]

[project.scripts]
prumo = "prumo_runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["runtime/prumo_runtime"]

[tool.hatch.build.targets.sdist]
include = [
  "/runtime/prumo_runtime",
  "/README.md",
  "/CHANGELOG.md",
  "/VERSION",
  "/scripts/prumo_runtime_install.sh",
  "/scripts/prumo_runtime_update.sh",
  "/scripts/prumo_runtime_install.ps1",
  "/scripts/prumo_runtime_update.ps1"
]
